samples/_failures_safe/1761598342_2a3f31_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_6d10779a.c: In function ‘main’:
./samples/SAFE/__tmp_6d10779a.c:156:20: error: expected ‘;’ at end of input
  156 |         free_matrix
      |                    ^
      |                    ;
./samples/SAFE/__tmp_6d10779a.c:156:9: error: expected declaration or statement at end of input
  156 |         free_matrix
      |         ^~~~~~~~~~~
./samples/SAFE/__tmp_6d10779a.c:156:9: error: expected declaration or statement at end of input
